Se agrega Js de carro de compra

--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -26,7 +26,8 @@
               <nav class="navegacion" id="navegacion">
                 <ul class="menu">
                   <li><a href="../index.html">Inicio</a>
-                  <li><a href="../galeria.html">Galeria</a>
+                    <li><a href="../galeria.html">Galeria</a></li>
+                    <li><a href="../tienda.html">Tienda</a>
                     <ul class="submenu">
                       <li><a href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
                       <li><a href="../GaleriaHTML/corazones.html" >Corazones</a></li>
@@ -36,7 +37,6 @@
                       <li><a href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                     </ul>
                   </li>
-                  <li><a href="../tienda.html">Tienda</a></li>
                   <li><a href="../registroClientes.html">Registrate</a></li>
                   <li><a href="../contacto.html">Contáctanos</a></li>
                 </ul>
@@ -88,10 +88,21 @@
               <img class="IMG_footer" src="../Imagenes/instagram.svg">
               <img class="IMG_footer" src="../Imagenes/facebook.svg">
             </div>
-            <div class="textofooter">
-              <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
-              <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
-              <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
+            <div class="contenedor_footer_direccion">
+              <div class="text_direccion">
+                <h2>Dirección:</h2>
+                <p>Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</p>
+              </div>
+              <div class="text_telefono">
+                <span class="footer_icon-whatsapp"><i class="fab fa-whatsapp"></i></span>
+                <h2  class="whatsapp">Whatsapp</h2>
+                <p>3132371940</p>
+              </div>
+              <div class="text_horario">
+                <h2>Horario:</h2> 
+                <p>Lunes a Sábado</p>
+                <p>8:00 am a 6:00 pm</p>
+              </div>
             </div>
           </div>
         </footer>
