--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -27,7 +27,8 @@
               <span class="icon-menu" id="btn-menu"><i class="fas fa-bars"></i></span>
               <nav class="navegacion" id="navegacion">
                 <ul class="menu">
-                  <li><a href="../galeria.html">Galeria</a>
+                  <li><a href="../galeria.html">Galeria</a></li>
+                  <li><a href="../tienda.html">Tienda</a>
                     <ul class="submenu">
                       <li><a href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
                       <li><a href="../GaleriaHTML/corazones.html" >Corazones</a></li>
@@ -37,7 +38,6 @@
                       <li><a href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                     </ul>
                   </li>
-                  <li><a href="../tienda.html">Tienda</a></li>
                   <li><a href="../registroClientes.html">Registrate</a></li>
                   <li><a href="../contacto.html">Contáctanos</a></li>
                 </ul>
