--- a/Proyecto/tienda.html
+++ b/Proyecto/tienda.html
@@ -1,91 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda - Freya</title>
+  <head >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Galeria - Freya</title>
+    <link href="../CSS/estilos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-    <link href="CSS/estilos.css" rel="stylesheet">
     <!-- Las siguientes 3 líneas corresponden a la asignación de estilo de letra desde Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <!-- -->
-</head>
-<body>
-  <div id="container_ppal">
-    <div id="containerPage">
-      <header>
-        <div class="contenedor-header">
-          <div class="contenedor-logo">
-            <img class="img-logo" src="../Imagenes/Logo.png" alt="Freya"/> 
+  </head>
+  <body>
+    <div id="container_ppal">
+      <div id="containerPage">
+        <header>
+          <div class="contenedor-header">
+            <div class="contenedor-logo">
+              <img class="img-logo" src="../Imagenes/Logo.png" alt="Freya"/> 
+            </div>
+            <div class="contenedor-menu">
+              <span class="icon-menu" id="btn-menu"><i class="fas fa-bars"></i></span>
+              <nav class="navegacion" id="navegacion">
+                <ul class="menu">
+                  <li><a href="../index.html">Inicio</a>
+                    <li><a href="../galeria.html">Galeria</a></li>
+                    <li><a href="../tienda.html">Tienda</a>
+                    <ul class="submenu">
+                      <li><a href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                      <li><a href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                      <li><a href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                      <li><a href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                      <li><a href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                      <li><a href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="../registroClientes.html">Registrate</a></li>
+                  <li><a href="../contacto.html">Contáctanos</a></li>
+                </ul>
+            </nav>
+            </div>
+            
           </div>
-          <div class="contenedor-menu">
-            <span class="icon-menu" id="btn-menu"><i class="fas fa-bars"></i></span>
-            <nav class="navegacion" id="navegacion">
-              <ul class="menu">
-                <li><a href="../index.html">Inicio</a>
-                <li><a href="../galeria.html">Galeria</a>
-                  <ul class="submenu">
-                    <li><a href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                    <li><a href="../GaleriaHTML/corazones.html" >Corazones</a></li>
-                    <li><a href="../GaleriaHTML/licores.html" >Bebidas</a></li>
-                    <li><a href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                    <li><a href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                    <li><a href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
-                  </ul>
-                </li>
-                <li><a href="../tienda.html">Tienda</a></li>
-                <li><a href="../registroClientes.html">Registrate</a></li>
-                <li><a href="../contacto.html">Contáctanos</a></li>
-              </ul>
-          </nav>
+        </header>
+  
+        <main>
+          <div class="container-main">
+            <div class="contenedor_galeria">
+              <div class="galeria">
+                <div class="imagen_galeria">
+                  <img src="Imagenes/chocoFresas/10Fresas.jpeg" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/chocoFresas.html"><h2>Choco Fresas</h2></a>
+                  </div>
+                </div>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/corazones/corazon (2).jpeg" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/corazones.html"><h2>Corazones Rellenos</h2></a>
+                  </div>
+                </div>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/licores/licor15.png" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/licores.html"><h2>Bebidas</h2></a>
+                  </div>
+                </div>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/chocoSorpresa/unicornioSorpresa.jpeg" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/chocoSorpresa.html"><h2>Choco Piñata</h2></a>
+                  </div>
+                </div>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/tortaPaleta/tortaPaleta (6).png" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/tortaPaleta.html"><h2>Torta Paleta</h2></a>
+                  </div>
+                </div>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/variedad/variedad (4).jpeg" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/variedad.html"><h2>Variedad</h2></a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          
-        </div>
-      </header>
-      <main>
-        <div class="container-main">
-          <div style="border-radius: 20px; border-color: #ffc8dd; width: 100%; height: 300px">
-              <p>Aqui irá la imagen que está seleccionando</p>
+        </main>
+        <footer>
+          <div class="contenedor-footer">
+            <div class="iconos">
+              <img class="IMG_footer" src="../Imagenes/instagram.svg">
+              <img class="IMG_footer" src="../Imagenes/facebook.svg">
+            </div>
+            <div class="contenedor_footer_direccion">
+              <div class="text_direccion">
+                <h2>Dirección:</h2>
+                <p>Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</p>
+              </div>
+              <div class="text_telefono">
+                <span class="footer_icon-whatsapp"><i class="fab fa-whatsapp"></i></span>
+                <h2  class="whatsapp">Whatsapp</h2>
+                <p>3132371940</p>
+              </div>
+              <div class="text_horario">
+                <h2>Horario:</h2> 
+                <p>Lunes a Sábado</p>
+                <p>8:00 am a 6:00 pm</p>
+              </div>
+            </div>
           </div>
-          <div style="border-radius:20px; border-color: #ffc8dd;  width: 100%; height: 300px">
-              <table>
-                  <tr>
-                      <td>  Producto 1  </td>
-                      <td>  Producto 2  </td>
-                      <td>  Producto 3  </td>
-                  </tr>
-                  <tr>
-                      <td>  Producto 4  </td>
-                      <td>  Producto 5  </td>
-                      <td>  Producto 6  </td>
-                  </tr>
-                  <tr>
-                      <td>  Producto 7  </td>
-                      <td>  Producto 8  </td>
-                      <td>  Producto 9  </td>
-                  </tr>
-              </table>
-          </div>
-        </div>
-      </main>
-      <footer>
-        <div class="contenedor-footer">
-          <div class="iconos">
-            <img class="IMG_footer" src="Imagenes/instagram.svg">
-            <img class="IMG_footer" src="Imagenes/facebook.svg">
-          </div>
-          <div class="textofooter">
-            <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
-            <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
-            <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
-          </div>
-        </div>
-      </footer>
+        </footer>
+      </div>
+      <script src="../JavaScript/menu.js"></script>
     </div>
-    <script src="../javaScript/menu.js"></script>
-  </div>
-</body>
+  </body>
 </html>
