--- a/Proyecto/GaleriaHTML/chocoFresas.html
+++ b/Proyecto/GaleriaHTML/chocoFresas.html
@@ -52,6 +52,7 @@
                             <div class="imagen_galeria-fresa">
                                 <img src="../Imagenes/chocoFresas/10Fresas.jpeg" alt="Fresa Chocolate">
                                 <div class="overlay">
+                                    <a href="modal.html"></a>
                                     <h2>Comprar</h2>
                                 </div>
                             </div>
